fix: delete align items from menu close btn

--- a/css/style.css
+++ b/css/style.css
@@ -1058,9 +1058,6 @@ Single-colored icons can be modified like so:
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   width: 100%;
 }
 
