--- a/sass/base/_header-mobile.scss
+++ b/sass/base/_header-mobile.scss
@@ -170,7 +170,6 @@
     &__top{
         display: flex;
         justify-content: space-between;
-        align-items: center;
         width: 100%;
       }
       &__close{
